# SpaceImpactClone

./: CMakeLists.txt  README.md
src/: SpaceImpact.cpp
src/Game/: Bullet.cpp  Bullet.h  GlobalGameDefines.h  Player.cpp  Player.h
src/Game/Enemies/: BaseEnemy.cpp  BaseEnemy.h  Boss.cpp  Boss.h  Enemy1.cpp  Enemy1.h  Enemy2.cpp  Enemy2.h  Enemy3.cpp  Enemy3.h
src/Game/Managers/: BulletManager.cpp  BulletManager.h  EnemyManager.cpp  EnemyManager.h  GameManager.cpp  GameManager.h
src/Game/UI/: HealthContainer.cpp  HealthContainer.h
src/Menu/: ScreenEnding.cpp  ScreenGameplay.cpp  ScreenGameplay.h  ScreenLogo.cpp  ScreenOptions.cpp  ScreenTitle.cpp  ScreenTitle.h  StateMachineMngr.h
